# stripe-toddler

./: .gitignore  .sonarcloud.properties  LICENSE  README.md  doppler.yaml  package.json  sonar-project.properties  wrangler.template.jsonc
.agents/: mcp-sse-proxy.cjs  mcp_config.json
.circleci/: config.yml
.devcontainer/: .tmux.conf  .zshrc  Dockerfile  devcontainer-lock.json  devcontainer.json  post-create-setup.sh  post-start-setup.sh
ios/StripeToddlerPOS/DesignSystem/: ToddlerDesignSystem.swift
ios/StripeToddlerPOS/Models/: POSModels.swift
ios/StripeToddlerPOS/Services/: BackendAPIClient.swift  BarcodeScannerService.swift  StripeTerminalManager.swift
ios/StripeToddlerPOS/StripeToddlerPOS.xcodeproj/: project.pbxproj
ios/StripeToddlerPOS/StripeToddlerPOS.xcodeproj/xcshareddata/xcschemes/: StripeToddlerPOS.xcscheme
ios/StripeToddlerPOS/StripeToddlerPOS/App/: StripeToddlerPOSApp.swift
ios/StripeToddlerPOS/StripeToddlerPOS/Views/: ErrorView.swift
ios/StripeToddlerPOS/StripeToddlerPOS/Views/Celebration/: CelebrationView.swift
ios/StripeToddlerPOS/StripeToddlerPOSTests/: StripeToddlerPOSTests.swift
ios/StripeToddlerPOS/Tests/: POSViewModelTests.swift
ios/StripeToddlerPOS/ViewModels/: POSViewModel.swift
ios/StripeToddlerPOS/Views/Celebration/: FireworksEffect.swift
ios/StripeToddlerPOS/Views/Checkout/: CheckoutView.swift  ItemCardView.swift
scripts/: cloud_login.sh  run-wrangler-dev.sh  sync-doppler-secrets.sh
worker/: Cargo.toml  wrangler.toml
worker/scripts/: seed-local.sh
worker/src/: lib.rs  models.rs
(+6 files in other folders)
