[package]
name = "stripe-toddler-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8.5", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
